<resources>
    <string name="app_name">CA3</string>
    <string name="submit">Submit</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="Exit">Exit</string>
    <string name="Share">Share</string>
    <string name="english">English</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="language">Language</string>
</resources>